--- a/app-calc-imc/impl/calcimc.html
+++ b/app-calc-imc/impl/calcimc.html
@@ -55,17 +55,19 @@
 </head>
 <body>
     <div>
-        <div>Calculadora de IMC</div>
+        <center>
+        <div><h3>Calculadora de IMC</h3></div>
 
         <div>Altura</div>
         <div><input id="campoAltura"/></div>
 
         <div>Peso</div>
         <div><input id="campoPeso"/></div>
-
+        <br/>
         <div><button onclick="calcular()">Calcular</button></div>
 
         <div id="resultado"></div>
+        </center>
     </div>
 </body>
 </html>
