--- a/app-calc/5-impl/calc.html
+++ b/app-calc/5-impl/calc.html
@@ -41,7 +41,7 @@
         </script>
     </head>
     <body>
-        <h1>Calculadora Top</h1>
+        <h1>Calculadora</h1>
         <input id="num1" type="number" placeholder="Número 1"/>
         <input id="num2" type="number" placeholder="Número 2"/>
         <button onclick="calc.somar()">Somar</button>
