--- a/index.html
+++ b/index.html
@@ -13,5 +13,17 @@
     <a href="app-calc/5-impl/calc.html">
         Calculadora
     </a>
+    <br/>
+    <a href="">
+
+    </a>
+    <br/>
+    <a href="">
+        
+    </a>
+    <br/>
+    <a href="">
+        
+    </a>
 </body>
 </html>
