--- a/app-calc/5-impl/calc.html
+++ b/app-calc/5-impl/calc.html
@@ -41,12 +41,15 @@
         </script>
     </head>
     <body>
-        <h1>Calculadora</h1>
+        <center>
+        <h1>Calculadora Padrão</h1>
         <input id="num1" type="number" placeholder="Número 1"/>
         <input id="num2" type="number" placeholder="Número 2"/>
+        <br><br/>
         <button onclick="calc.somar()">Somar</button>
         <button onclick="calc.subtrair()">Subtrair</button>
         <button onclick="calc.multiplicar()">Multiplicar</button>
         <button onclick="calc.dividir()">Dividir</button> 
+        </center>
     </body>
 </html>
