--- a/index.html
+++ b/index.html
@@ -6,20 +6,21 @@
     <title>Menu</title>
 </head>
 <body>
+    <h1>Calculadoras</h1>
     <a href="app-calc-imc/impl/calcimc.html">
         Calculadora de IMC
     </a>
     <br/>
     <a href="app-calc/5-impl/calc.html">
-        Calculadora
+        Calculadora Padrão
     </a>
     <br/>
-    <a href="">
-
+    <a href="app-media/calcmedia.html">
+        Calculadora de Média
     </a>
     <br/>
-    <a href="">
-        
+    <a href="app-maiormenor/calcmaiormenor.html">
+        Calculadora Maior/Menor
     </a>
     <br/>
     <a href="">
