--- a/app-media/calcmedia.html
+++ b/app-media/calcmedia.html
@@ -19,12 +19,10 @@
         <center>
         <div><h3>Calculadora de Média</h3></div>
         <br/>
-        <div>Insira o 1º número</div>
-        <div><input id="campo1"/></div> 
-        <div>Insira o 2º número</div>
-        <div><input id="campo2"/></div>
-        <br/>
-        <div><button onclick="calcular()">Calcular Média</button></div>
+        <input id="campo1" type="number" placeholder="Número 1"/>
+        <input id="campo2" type="number" placeholder="Número 2"/>
+        <br/><br/>
+        <button onclick="calcular()">Calcular Média</button>
         </center>
     </div>
 </body>
