--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         Calculadora Maior/Menor
     </a>
     <br/>
-    <a href="">
-        
+    <a href="app-triangulo/descobrirtriangulo.html">
+        Verificar se é um triângulo
     </a>
 </body>
 </html>
