--- a/index.html
+++ b/index.html
@@ -3,28 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu</title>
+    <link rel="stylesheet" href="style.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Chilanka&display=swap" rel="stylesheet">
+    <title>Menu de Calculadoras</title>
 </head>
 <body>
     <h1>Calculadoras</h1>
-    <a href="app-calc-imc/impl/calcimc.html">
+    <ul>
+    <li><a href="app-calc-imc/impl/calcimc.html">
         Calculadora de IMC
-    </a>
+    </a></li>
     <br/>
-    <a href="app-calc/5-impl/calc.html">
+    <li><a href="app-calc/5-impl/calc.html">
         Calculadora Padrão
-    </a>
+    </a></li>
     <br/>
-    <a href="app-media/calcmedia.html">
+    <li><a href="app-media/calcmedia.html">
         Calculadora de Média
-    </a>
+    </a></li>
     <br/>
-    <a href="app-maiormenor/calcmaiormenor.html">
+    <li><a href="app-maiormenor/calcmaiormenor.html">
         Calculadora Maior/Menor
-    </a>
+    </a></li>
     <br/>
-    <a href="app-triangulo/descobrirtriangulo.html">
+    <li><a href="app-triangulo/descobrirtriangulo.html">
         Verificar se é um triângulo
-    </a>
+    </a></li>
+    </ul>
 </body>
 </html>
