--- a/app-calc-imc/impl/calcimc.html
+++ b/app-calc-imc/impl/calcimc.html
@@ -1,73 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculadora IMC</title>
 
     <script>
-        //Guardando dados da tela dentro de objetos
+      //pessoa  faz:  quardarOsDados, calculoIMC
+      //controle faz: ler dados da tela e exibir dados na tela
 
-        function calcular(){
-            //1 - ler os dados da tela
-            let altura = document.getElementById("campoAltura").value
-            let peso = document.getElementById("campoPeso").value
+      pessoa = {
+        altura: 0,
+        peso: 0,
+        calcularImc: function () {
+          return this.peso / (this.altura * this.altura);
+        },
+        classificar: function () {
+          //3 Classicar o resultado
+          let mensagem = "";
+          let imc = this.calcularImc();
+          if (imc < 18.5) {
+            mensagem = "Abaixo do Peso";
+          } else if (imc >= 18.5 && imc <= 24.9) {
+            mensagem = "Peso normal";
+          } else if (imc >= 25 && imc <= 29.9) {
+            mensagem = "Sobrepeso";
+          } else if (imc >= 30 && imc <= 34.9) {
+            mensagem = "Obesidade Grau 1";
+          } else if (imc >= 35 && imc <= 39.9) {
+            mensagem = "Obesidade Grau 2";
+          } else {
+            mensagem = "Obesidade Grau 3";
+          }
+          return mensagem;
+        },
+      };
 
-            //Objeto que gaurda os dados da pessoa
-            //e pode ter funções
-            let pessoa = {
-                altura:altura, 
-                peso:peso,
-                imc: function(){
-                    return this.peso / (this.altura * this.altura)
-                }
-            }
-            console.log(pessoa.altura)
-            console.log(pessoa.peso)
-            console.log(pessoa.imc())
-            //2 - cálcular o IMC
-            let imc = pessoa.imc()
-            
-            console.log(imc)
-            //3 - classificar o resultado
-            let mensagem = ""
+      controle = {
+        lerDados: function () {
+          //1 Leitura dos dados da tela
+          let altura = document.getElementById("campoAltura").value;
+          let peso = document.getElementById("campoPeso").value;
+          return { altura, peso };
+        },
+        exibirResultado: function (msg) {
+          document.getElementById("resultado").innerText = msg;
+        },
+      };
 
-            if(imc < 18.5){
-                mensagem="Abaixo do peso"
-            }else if(imc>=18.5 && imc<=24.9){
-                mensagem="Peso Normal"
-            }else if(imc>=25 && imc <=29.9){
-                mensagem="Sobrepeso"
-            }else if(imc>=30 && imc<=34.9){
-                mensagem="Obesidade grau 1"
-            }else if(imc>=35 && imc<=39.9){
-                mensagem="Obesidade grau 2"
-            }else if(imc>40){
-                mensagem="Obesidade grau 3"
-            }else{
-                mensagem="Os campos estão vazios!"
-            }
-            //4 - mostrar o resultado
-            document.getElementById("resultado").innerText = mensagem
-        }
+      //Guardando dados da tela dentro de objetos
+      function calcular() {
+        //1) ler os dados da tela
+        let dados = controle.lerDados();
+
+        //2) Atribuir os dados a pessoa
+        pessoa.altura = dados.altura;
+        pessoa.peso = dados.peso;
+
+        //3) classificação
+        let classificacao = pessoa.classificar();
+
+        //4) Exibir na tela
+        controle.exibirResultado(classificacao);
+      }
     </script>
-
-</head>
-<body>
+  </head>
+  <body>
     <div>
-        <center>
-        <div><h3>Calculadora de IMC</h3></div>
+      <div>Calculadora de IMC v5</div>
 
-        <div>Altura</div>
-        <div><input id="campoAltura"/></div>
+      <div>Altura</div>
+      <div><input id="campoAltura" /></div>
 
-        <div>Peso</div>
-        <div><input id="campoPeso"/></div>
-        <br/>
-        <div><button onclick="calcular()">Calcular</button></div>
+      <div>Peso</div>
+      <div><input id="campoPeso" /></div>
 
-        <div id="resultado"></div>
-        </center>
+      <div><button onclick="calcular()">Calcular</button></div>
+
+      <div id="resultado"></div>
     </div>
-</body>
+  </body>
 </html>
