--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
     <li><a href="app-triangulo/descobrirtriangulo.html">
         Verificar se é um triângulo
     </a></li>
+    <li><a href="app-ordernar/ordenar.html">
+        Ordenar três números
+    </a></li>    
+    </li>
     </ul>
 </body>
 </html>
