calculadora de consumo adicionada2

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
                 Ordenar três números
             </a></li>
         <br />
+        <li><a href="app-consumocomb/consumocomb.html">
+            Álcool ou Gasolina
+        </a></li>
         </li>
     </ul>
 </body>
