--- a/index.html
+++ b/index.html
@@ -7,40 +7,60 @@
     <link rel="stylesheet" href="style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Chilanka&display=swap" rel="stylesheet">
     <title>Menu de Calculadoras</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <h1>Calculadoras</h1>
-    <ul>
-        <li><a href="app-calc-imc/impl/calcimc.html">
+    <div class="card text-white bg-dark mb-3" style="max-width: 18rem;">
+
+        <img src="calculadoraimagem.jpg" class="card-img-top">
+
+        <div class="card-body">
+            <h3 class="card-title">Calculadoras</h3>
+
+
+            <a href="app-calc-imc/impl/calcimc.html" class="card-link">
                 Calculadora de IMC
-            </a></li>
-        <br />
-        <li><a href="app-calc/5-impl/calc.html">
+            </a></br>
+
+            <a href="app-calc/5-impl/calc.html" class="card-link">
                 Calculadora Padrão
-            </a></li>
-        <br />
-        <li><a href="app-media/calcmedia.html">
+            </a></br>
+
+            <a href="app-media/calcmedia.html" class="card-link">
                 Calculadora de Média
-            </a></li>
-        <br />
-        <li><a href="app-maiormenor/calcmaiormenor.html">
+            </a></br>
+
+            <a href="app-maiormenor/calcmaiormenor.html" class="card-link">
                 Calculadora Maior/Menor
-            </a></li>
-        <br />
-        <li><a href="app-triangulo/descobrirtriangulo.html">
+            </a></br>
+
+            <a href="app-triangulo/descobrirtriangulo.html" class="card-link">
                 Verificar se é um triângulo
-            </a></li>
-        <br />
-        <li><a href="app-ordernar/ordenar.html">
+            </a></br>
+
+            <a href="app-ordernar/ordenar.html">
                 Ordenar três números
-            </a></li>
-        <br />
-        <li><a href="app-consumocomb/consumocomb.html">
-            Álcool ou Gasolina
-        </a></li>
-        </li>
-    </ul>
+            </a></br>
+
+            <a href="app-consumocomb/consumocomb.html">
+                Álcool ou Gasolina
+            </a></br>
+
+
+        </div>
+    </div>
 </body>
 
 </html>
