--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <div class="card text-white bg-dark mb-3" style="max-width: 18rem;">
+    <div class="card text-white border-primary bg-dark mb-3" style="max-width: 18rem;">
 
         <img src="calculadoraimagem.jpg" class="card-img-top">
 
