a bunch of modifications

--- a/app-calc/5-impl/calc.html
+++ b/app-calc/5-impl/calc.html
@@ -60,7 +60,7 @@
 </head>
 
 <body>
-    <center>
+    <div>
         <h1>Calculadora Padrão</h1>
         <input id="num1" type="number" placeholder="Número 1" />
         <input id="num2" type="number" placeholder="Número 2" />
@@ -69,7 +69,7 @@
         <button onclick="calc.subtrair()">Subtrair</button>
         <button onclick="calc.multiplicar()">Multiplicar</button>
         <button onclick="calc.dividir()">Dividir</button>
-    </center>
+    </div>
 </body>
 
 </html>
