--- a/app-classificar/classificacao.html
+++ b/app-classificar/classificacao.html
@@ -47,10 +47,12 @@
 </head>
 
 <body>
-    <h3>Classificar por idade</h3>
-    <input type="number" id="idade" placeholder="Qual a idade da pessoa" />
-    <button onclick="aoClicarAdicionar()">Adicionar</button>
-    <label id="resultado"></label>
+    <div>
+        <h3>Classificar por idade</h3>
+        <input type="number" id="idade" placeholder="Qual a idade da pessoa" />
+        <button onclick="aoClicarAdicionar()">Adicionar</button>
+        <label id="resultado"></label>
+    </div>
 </body>
 
 </html>
