a bunch of modifications2

--- a/cadastro-tarefas/cadastrocarros.html
+++ b/cadastro-tarefas/cadastrocarros.html
@@ -59,8 +59,8 @@
                 <input id="in2" placeholder="Digite o ano" type="number" class="form-control" />
                 <input id="in3" placeholder="Digite o modelo" type="text" class="form-control" />
                 <button class="btn btn-primary" type="button" onclick="cadastrar()">Cadastrar</button>
-                <button class="btn btn-primary" type="button" onclick="listar()">Listar</button>
-                <button class="btn btn-primary" type="button" onclick="limpar()">Limpar</button>
+                <button class="btn btn-secondary" type="button" onclick="listar()">Listar</button>
+                <button class="btn btn-danger" type="button" onclick="limpar()">Limpar</button>
             </div>
         </form>
         <div id="resultado"></div>
