a bunch of modifications4

--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
             <a href="projeto3/5-impl/select.html">
                 Cadastro de Programadores
             </a></br>
+
+            <a href="cadastro-tarefas/cadastrocarros.html">
+                Cadastro de Carros
+            </a></br>
             
         </div>
 
