a bunch of modifications6

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body class="prime">
     <div class="container">
         <h3 class="prim">Under Construction ;></h3>
-        <div class="card text-white border-primary bg-dark mb-3" style="max-width: 18rem;">
+        <div class="card text-white bg-dark mb-3" style="max-width: 18rem;">
 
             <img src="calculadoraimagem.jpg" class="card-img-top">
 
