--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
                     Cadastro de Carros
                 </a></br>
 
+                <a href="arrays/receitas.html" target="_blank">
+                    Receita / Despesa
+                </a></br>
             </div>
 
         </div>
