--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     Cadastro de Carros
                 </a></br>
 
-                <a href="arrays/receitas.html" target="_blank">
+                <a href="arrays/receitaDespesa.html" target="_blank">
                     Receita / Despesa
                 </a></br>
             </div>
